start collapsing header on scroll + global fixes (#241)

--- a/src/assets/css/tailwind.css
+++ b/src/assets/css/tailwind.css
@@ -171,3 +171,13 @@
 .toastify-avatar {
 	margin-right: 10px;
 }
+
+.toastify.on {
+	opacity: 1;
+}
+
+.toastify {
+	opacity: 0;
+	box-shadow: 0 3px 6px -1px rgba(0, 0, 0, 0.12), 0 10px 36px -4px rgba(77, 96, 232, 0.1);
+	transition: all 0.4s cubic-bezier(0.215, 0.61, 0.355, 1);
+}
